[workspace]
resolver = "2"
members = [
    "astar",
    "combinations",
    "2015/day1",
    "2015/day2",
    "2015/day3",
    "2015/day4",
    "2015/day5",
    "2015/day6",
    "2015/day7",
    "2015/day8",
    "2015/day9",
    "2015/day10",
    "2015/day11",
    "2015/day12",
    "2015/day13",
    "2015/day14",
    "2015/day15",
    "2015/day16",
    "2015/day17",
    "2015/day18",
    "2015/day19",
    "2015/day20",
    "2015/day21",
    "2015/day22",
    "2015/day23",
    "2015/day24",
    "2015/day25",
    "2021/day1",
    "2021/day2",
    "2021/day3",
    "2021/day4",
    "2021/day5",
    "2021/day6",
    "2021/day7",
    "2021/day8",
    "2021/day9",
    "2021/day10",
    "2021/day11",
    "2021/day12",
    "2021/day13",
    "2021/day14",
    "2021/day15",
    "2021/day16",
    "2021/day17",
    "2021/day18",
    "2021/day19",
    "2022/day1",
    "2022/day2",
    "2022/day3",
    "2022/day4",
    "2022/day5",
    "2022/day6",
    "2022/day7",
    "2022/day8",
    "2022/day9",
    "2022/day10",
    "2022/day11",
    "2022/day12",
    "2022/day13",
    "2022/day14",
    "2022/day15",
    "2022/day16",
    "2022/day17",
    "2022/day18",
    "2022/day19",
    "2022/day20",
    "2022/day21",
    "2022/day22",
    "2022/day23",
    "2022/day24",
    "2022/day25",
    "2023/day01",
    "2023/day02",
    "2023/day03",
    "2023/day04",
    "2023/day05",
    "2023/day06",
    "2023/day07",
    "2023/day08",
    "2023/day09",
    "2023/day10",
    "2023/day11",
    "2023/day12",
    "2024/day01",
    "2024/day02",
    "2024/day03",
    "2024/day04",
    "2024/day05",
    "2024/day06",
    "2024/day07",
    "2024/day08",
    "2024/day09",
    "2024/day10",
    "2024/day11",
    "2024/day12",
    "2024/day13",
    "2024/day14",
    "2024/day15",
    "2024/day16",
    "2024/day17",
    "2025/day01",
    "2025/day02",
    "2025/day03",
]

[workspace.dependencies]
combinations = { path = "combinations" }
astar = { path = "astar" }
