[package]
name = "mmxv_day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.68"
indoc = "1.0.8"
once_cell = "1.17.0"
regex = "1.7.0"
combinations = { workspace = true }
itertools = "0.10.5"
