[package]
name = "mmxxii_day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.68"
indoc = "2.0"
num = "0.4.0"
once_cell = "1.16.0"
regex = "1.7.0"
astar = { workspace = true }
